# inno-agent

./: .env.example  .gitattributes  .gitignore  .golangci.yml  .lefthook.yml  README.md  api-core.yaml  api-frontend.yaml  bench_gpu.py  bench_gpu_results.json  bench_remote.py  bench_results.json  bench_rps.json  bench_stress.json  benchmark_report.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: cd.yml  ci-backend.yml  ci-frontend.yml  ci-python.yml  ci-review-agent.yml  ci-sandbox.yml  python-ci.yml
.mimocode/plans/: 1783852831552-playful-knight.md
.tmp/load-test/: results.tsv
ai/: pyproject.toml  test_dummy.py
backend/: .env  .golangci.yml  README.md  docker-compose.yml  go.work  go.work.sum
backend/chat-api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fixes.md  go.mod  go.sum
backend/identity/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum
backend/innoagent/: .env.example  .gitignore  Dockerfile  Dockerfile.model-loader  README.md  deploy.sh  go.mod  (+3 more)
bench/: .gitignore  README.md  go.mod  go.sum  plan.md
docs/: api-LLMp.yaml  api-frontend.yaml  api-review.yaml
frontend/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
infrastructure/: .env.example  docker-compose.yml  zitadel.yaml
sandbox/: .gitignore  Dockerfile  server.go  server_test.go
scripts/: check-logs.sh  dev-setup.sh  dev.sh  load-test.sh  ollama-pull.sh  prod.sh  promote.sh  validate-alerts.sh
(+564 files in other folders)
